# bump-hunter

./: CMakeLists.txt
include/fit/: BumpHunter.h  CrystalBall.h  HpsFitResult.h
include/math/: ExpPol3BkgFunction.h  ExpPol3FullFunction.h  ExpPol5BkgFunction.h  ExpPol5FullFunction.h  FitFunction.h  FunctionMath.h
include/utils/: FitPrinter.h
src/fit/: BumpHunter.cxx  CMakeLists.txt  CrystalBall.cxx  bump_hunter.cxx
src/math/: CMakeLists.txt  ExpPol3BkgFunction.cxx  ExpPol3FullFunction.cxx  ExpPol5BkgFunction.cxx  ExpPol5FullFunction.cxx  FunctionMath.cxx
src/utils/: CMakeLists.txt  FitPrinter.cxx
